versions/0.8.1/_sources/refs/_aws-cdk_aws-wafregional.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"/gqpXsd7YxjwMrM0mAWUK0c0BmimFamON1Dz/LgBPDE="}

@aws-cdk/aws-wafregional
========================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/wafregional/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:wafregional:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="wafregional" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>wafregional</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:wafregional:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='wafregional', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-wafregional/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-wafregional@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-wafregional": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-wafregional@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-wafregional/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-wafregional@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-wafregional": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-wafregional@0.8.1



.. mdinclude:: ./__aws-cdk_aws-wafregional.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-wafregional


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-wafregional.cloudformation

ByteMatchSetResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: ByteMatchSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.ByteMatchSetResource;

      .. code-tab:: javascript

         const { cloudformation.ByteMatchSetResource } = require('@aws-cdk/aws-wafregional');

      .. code-tab:: typescript

         import { cloudformation.ByteMatchSetResource } from '@aws-cdk/aws-wafregional';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ByteMatchSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ByteMatchSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-wafregional.cloudformation.ByteMatchSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ByteMatchTupleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.ByteMatchSetResource.ByteMatchTupleProperty;

         .. code-tab:: javascript

            // cloudformation.ByteMatchSetResource.ByteMatchTupleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ByteMatchSetResource.ByteMatchTupleProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: fieldToMatch

         ``ByteMatchSetResource.ByteMatchTupleProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-bytematchset-bytematchtuple.html#cfn-wafregional-bytematchset-bytematchtuple-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.ByteMatchSetResource.FieldToMatchProperty`


      .. py:attribute:: positionalConstraint

         ``ByteMatchSetResource.ByteMatchTupleProperty.PositionalConstraint``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-bytematchset-bytematchtuple.html#cfn-wafregional-bytematchset-bytematchtuple-positionalconstraint


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: targetString

         ``ByteMatchSetResource.ByteMatchTupleProperty.TargetString``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-bytematchset-bytematchtuple.html#cfn-wafregional-bytematchset-bytematchtuple-targetstring


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: targetStringBase64

         ``ByteMatchSetResource.ByteMatchTupleProperty.TargetStringBase64``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-bytematchset-bytematchtuple.html#cfn-wafregional-bytematchset-bytematchtuple-targetstringbase64


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: textTransformation

         ``ByteMatchSetResource.ByteMatchTupleProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-bytematchset-bytematchtuple.html#cfn-wafregional-bytematchset-bytematchtuple-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: FieldToMatchProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.ByteMatchSetResource.FieldToMatchProperty;

         .. code-tab:: javascript

            // cloudformation.ByteMatchSetResource.FieldToMatchProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ByteMatchSetResource.FieldToMatchProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: data

         ``ByteMatchSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-bytematchset-fieldtomatch.html#cfn-wafregional-bytematchset-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``ByteMatchSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-bytematchset-fieldtomatch.html#cfn-wafregional-bytematchset-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ByteMatchSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ByteMatchSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.ByteMatchSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.ByteMatchSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ByteMatchSetResourceProps } from '@aws-cdk/aws-wafregional';





   .. py:attribute:: byteMatchSetName

      ``AWS::WAFRegional::ByteMatchSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-bytematchset.html#cfn-wafregional-bytematchset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: byteMatchTuples

      ``AWS::WAFRegional::ByteMatchSet.ByteMatchTuples``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-bytematchset.html#cfn-wafregional-bytematchset-bytematchtuples


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.ByteMatchSetResource.ByteMatchTupleProperty` or undefined


IPSetResource
~~~~~~~~~~~~~

.. py:class:: IPSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.IPSetResource;

      .. code-tab:: javascript

         const { cloudformation.IPSetResource } = require('@aws-cdk/aws-wafregional');

      .. code-tab:: typescript

         import { cloudformation.IPSetResource } from '@aws-cdk/aws-wafregional';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``IPSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``IPSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-wafregional.cloudformation.IPSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: IPSetDescriptorProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.IPSetResource.IPSetDescriptorProperty;

         .. code-tab:: javascript

            // cloudformation.IPSetResource.IPSetDescriptorProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.IPSetResource.IPSetDescriptorProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: type

         ``IPSetResource.IPSetDescriptorProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-ipset-ipsetdescriptor.html#cfn-wafregional-ipset-ipsetdescriptor-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``IPSetResource.IPSetDescriptorProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-ipset-ipsetdescriptor.html#cfn-wafregional-ipset-ipsetdescriptor-value


         :type: string or :py:class:`@aws-cdk/cdk.Token`



IPSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: IPSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.IPSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.IPSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.IPSetResourceProps } from '@aws-cdk/aws-wafregional';





   .. py:attribute:: ipSetName

      ``AWS::WAFRegional::IPSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-ipset.html#cfn-wafregional-ipset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ipSetDescriptors

      ``AWS::WAFRegional::IPSet.IPSetDescriptors``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-ipset.html#cfn-wafregional-ipset-ipsetdescriptors


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.IPSetResource.IPSetDescriptorProperty` or undefined


RuleResource
~~~~~~~~~~~~

.. py:class:: RuleResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.RuleResource;

      .. code-tab:: javascript

         const { cloudformation.RuleResource } = require('@aws-cdk/aws-wafregional');

      .. code-tab:: typescript

         import { cloudformation.RuleResource } from '@aws-cdk/aws-wafregional';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``RuleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``RuleResource``
   :type properties: :py:class:`~@aws-cdk/aws-wafregional.cloudformation.RuleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: PredicateProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.RuleResource.PredicateProperty;

         .. code-tab:: javascript

            // cloudformation.RuleResource.PredicateProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.RuleResource.PredicateProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: dataId

         ``RuleResource.PredicateProperty.DataId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-rule-predicate.html#cfn-wafregional-rule-predicate-dataid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: negated

         ``RuleResource.PredicateProperty.Negated``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-rule-predicate.html#cfn-wafregional-rule-predicate-negated


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: type

         ``RuleResource.PredicateProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-rule-predicate.html#cfn-wafregional-rule-predicate-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`



RuleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: RuleResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.RuleResourceProps;

      .. code-tab:: javascript

         // cloudformation.RuleResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.RuleResourceProps } from '@aws-cdk/aws-wafregional';





   .. py:attribute:: metricName

      ``AWS::WAFRegional::Rule.MetricName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-rule.html#cfn-wafregional-rule-metricname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ruleName

      ``AWS::WAFRegional::Rule.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-rule.html#cfn-wafregional-rule-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: predicates

      ``AWS::WAFRegional::Rule.Predicates``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-rule.html#cfn-wafregional-rule-predicates


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.RuleResource.PredicateProperty` or undefined


SizeConstraintSetResource
~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SizeConstraintSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.SizeConstraintSetResource;

      .. code-tab:: javascript

         const { cloudformation.SizeConstraintSetResource } = require('@aws-cdk/aws-wafregional');

      .. code-tab:: typescript

         import { cloudformation.SizeConstraintSetResource } from '@aws-cdk/aws-wafregional';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SizeConstraintSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SizeConstraintSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-wafregional.cloudformation.SizeConstraintSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FieldToMatchProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.SizeConstraintSetResource.FieldToMatchProperty;

         .. code-tab:: javascript

            // cloudformation.SizeConstraintSetResource.FieldToMatchProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SizeConstraintSetResource.FieldToMatchProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: data

         ``SizeConstraintSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-sizeconstraintset-fieldtomatch.html#cfn-wafregional-sizeconstraintset-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``SizeConstraintSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-sizeconstraintset-fieldtomatch.html#cfn-wafregional-sizeconstraintset-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SizeConstraintProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.SizeConstraintSetResource.SizeConstraintProperty;

         .. code-tab:: javascript

            // cloudformation.SizeConstraintSetResource.SizeConstraintProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SizeConstraintSetResource.SizeConstraintProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: comparisonOperator

         ``SizeConstraintSetResource.SizeConstraintProperty.ComparisonOperator``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-sizeconstraintset-sizeconstraint.html#cfn-wafregional-sizeconstraintset-sizeconstraint-comparisonoperator


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: fieldToMatch

         ``SizeConstraintSetResource.SizeConstraintProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-sizeconstraintset-sizeconstraint.html#cfn-wafregional-sizeconstraintset-sizeconstraint-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.SizeConstraintSetResource.FieldToMatchProperty`


      .. py:attribute:: size

         ``SizeConstraintSetResource.SizeConstraintProperty.Size``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-sizeconstraintset-sizeconstraint.html#cfn-wafregional-sizeconstraintset-sizeconstraint-size


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: textTransformation

         ``SizeConstraintSetResource.SizeConstraintProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-sizeconstraintset-sizeconstraint.html#cfn-wafregional-sizeconstraintset-sizeconstraint-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`



SizeConstraintSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SizeConstraintSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.SizeConstraintSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.SizeConstraintSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.SizeConstraintSetResourceProps } from '@aws-cdk/aws-wafregional';





   .. py:attribute:: sizeConstraintSetName

      ``AWS::WAFRegional::SizeConstraintSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-sizeconstraintset.html#cfn-wafregional-sizeconstraintset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: sizeConstraints

      ``AWS::WAFRegional::SizeConstraintSet.SizeConstraints``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-sizeconstraintset.html#cfn-wafregional-sizeconstraintset-sizeconstraints


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.SizeConstraintSetResource.SizeConstraintProperty` or undefined


SqlInjectionMatchSetResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SqlInjectionMatchSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.SqlInjectionMatchSetResource;

      .. code-tab:: javascript

         const { cloudformation.SqlInjectionMatchSetResource } = require('@aws-cdk/aws-wafregional');

      .. code-tab:: typescript

         import { cloudformation.SqlInjectionMatchSetResource } from '@aws-cdk/aws-wafregional';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SqlInjectionMatchSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SqlInjectionMatchSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-wafregional.cloudformation.SqlInjectionMatchSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FieldToMatchProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.SqlInjectionMatchSetResource.FieldToMatchProperty;

         .. code-tab:: javascript

            // cloudformation.SqlInjectionMatchSetResource.FieldToMatchProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SqlInjectionMatchSetResource.FieldToMatchProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: data

         ``SqlInjectionMatchSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-sqlinjectionmatchset-fieldtomatch.html#cfn-wafregional-sqlinjectionmatchset-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``SqlInjectionMatchSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-sqlinjectionmatchset-fieldtomatch.html#cfn-wafregional-sqlinjectionmatchset-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SqlInjectionMatchTupleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty;

         .. code-tab:: javascript

            // cloudformation.SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: fieldToMatch

         ``SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-sqlinjectionmatchset-sqlinjectionmatchtuple.html#cfn-wafregional-sqlinjectionmatchset-sqlinjectionmatchtuple-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.SqlInjectionMatchSetResource.FieldToMatchProperty`


      .. py:attribute:: textTransformation

         ``SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-sqlinjectionmatchset-sqlinjectionmatchtuple.html#cfn-wafregional-sqlinjectionmatchset-sqlinjectionmatchtuple-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`



SqlInjectionMatchSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SqlInjectionMatchSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.SqlInjectionMatchSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.SqlInjectionMatchSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.SqlInjectionMatchSetResourceProps } from '@aws-cdk/aws-wafregional';





   .. py:attribute:: sqlInjectionMatchSetName

      ``AWS::WAFRegional::SqlInjectionMatchSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-sqlinjectionmatchset.html#cfn-wafregional-sqlinjectionmatchset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: sqlInjectionMatchTuples

      ``AWS::WAFRegional::SqlInjectionMatchSet.SqlInjectionMatchTuples``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-sqlinjectionmatchset.html#cfn-wafregional-sqlinjectionmatchset-sqlinjectionmatchtuples


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty` or undefined


WebACLAssociationResource
~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WebACLAssociationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.WebACLAssociationResource;

      .. code-tab:: javascript

         const { cloudformation.WebACLAssociationResource } = require('@aws-cdk/aws-wafregional');

      .. code-tab:: typescript

         import { cloudformation.WebACLAssociationResource } from '@aws-cdk/aws-wafregional';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``WebACLAssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``WebACLAssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-wafregional.cloudformation.WebACLAssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


WebACLAssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WebACLAssociationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.WebACLAssociationResourceProps;

      .. code-tab:: javascript

         // cloudformation.WebACLAssociationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.WebACLAssociationResourceProps } from '@aws-cdk/aws-wafregional';





   .. py:attribute:: resourceArn

      ``AWS::WAFRegional::WebACLAssociation.ResourceArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-webaclassociation.html#cfn-wafregional-webaclassociation-resourcearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: webAclId

      ``AWS::WAFRegional::WebACLAssociation.WebACLId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-webaclassociation.html#cfn-wafregional-webaclassociation-webaclid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


WebACLResource
~~~~~~~~~~~~~~

.. py:class:: WebACLResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.WebACLResource;

      .. code-tab:: javascript

         const { cloudformation.WebACLResource } = require('@aws-cdk/aws-wafregional');

      .. code-tab:: typescript

         import { cloudformation.WebACLResource } from '@aws-cdk/aws-wafregional';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``WebACLResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``WebACLResource``
   :type properties: :py:class:`~@aws-cdk/aws-wafregional.cloudformation.WebACLResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.WebACLResource.ActionProperty;

         .. code-tab:: javascript

            // cloudformation.WebACLResource.ActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.WebACLResource.ActionProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: type

         ``WebACLResource.ActionProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-webacl-action.html#cfn-wafregional-webacl-action-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: RuleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.WebACLResource.RuleProperty;

         .. code-tab:: javascript

            // cloudformation.WebACLResource.RuleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.WebACLResource.RuleProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: action

         ``WebACLResource.RuleProperty.Action``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-webacl-rule.html#cfn-wafregional-webacl-rule-action


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.WebACLResource.ActionProperty`


      .. py:attribute:: priority

         ``WebACLResource.RuleProperty.Priority``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-webacl-rule.html#cfn-wafregional-webacl-rule-priority


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: ruleId

         ``WebACLResource.RuleProperty.RuleId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-webacl-rule.html#cfn-wafregional-webacl-rule-ruleid


         :type: string or :py:class:`@aws-cdk/cdk.Token`



WebACLResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WebACLResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.WebACLResourceProps;

      .. code-tab:: javascript

         // cloudformation.WebACLResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.WebACLResourceProps } from '@aws-cdk/aws-wafregional';





   .. py:attribute:: defaultAction

      ``AWS::WAFRegional::WebACL.DefaultAction``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-webacl.html#cfn-wafregional-webacl-defaultaction


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.WebACLResource.ActionProperty`


   .. py:attribute:: metricName

      ``AWS::WAFRegional::WebACL.MetricName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-webacl.html#cfn-wafregional-webacl-metricname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: webAclName

      ``AWS::WAFRegional::WebACL.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-webacl.html#cfn-wafregional-webacl-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: rules

      ``AWS::WAFRegional::WebACL.Rules``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-webacl.html#cfn-wafregional-webacl-rules


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.WebACLResource.RuleProperty` or undefined


XssMatchSetResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: XssMatchSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.XssMatchSetResource;

      .. code-tab:: javascript

         const { cloudformation.XssMatchSetResource } = require('@aws-cdk/aws-wafregional');

      .. code-tab:: typescript

         import { cloudformation.XssMatchSetResource } from '@aws-cdk/aws-wafregional';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``XssMatchSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``XssMatchSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-wafregional.cloudformation.XssMatchSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FieldToMatchProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.XssMatchSetResource.FieldToMatchProperty;

         .. code-tab:: javascript

            // cloudformation.XssMatchSetResource.FieldToMatchProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.XssMatchSetResource.FieldToMatchProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: data

         ``XssMatchSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-xssmatchset-fieldtomatch.html#cfn-wafregional-xssmatchset-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``XssMatchSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-xssmatchset-fieldtomatch.html#cfn-wafregional-xssmatchset-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: XssMatchTupleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.regional.cloudformation.XssMatchSetResource.XssMatchTupleProperty;

         .. code-tab:: javascript

            // cloudformation.XssMatchSetResource.XssMatchTupleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.XssMatchSetResource.XssMatchTupleProperty } from '@aws-cdk/aws-wafregional';





      .. py:attribute:: fieldToMatch

         ``XssMatchSetResource.XssMatchTupleProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-xssmatchset-xssmatchtuple.html#cfn-wafregional-xssmatchset-xssmatchtuple-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.XssMatchSetResource.FieldToMatchProperty`


      .. py:attribute:: textTransformation

         ``XssMatchSetResource.XssMatchTupleProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafregional-xssmatchset-xssmatchtuple.html#cfn-wafregional-xssmatchset-xssmatchtuple-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`



XssMatchSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: XssMatchSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.regional.cloudformation.XssMatchSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.XssMatchSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.XssMatchSetResourceProps } from '@aws-cdk/aws-wafregional';





   .. py:attribute:: xssMatchSetName

      ``AWS::WAFRegional::XssMatchSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-xssmatchset.html#cfn-wafregional-xssmatchset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: xssMatchTuples

      ``AWS::WAFRegional::XssMatchSet.XssMatchTuples``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-wafregional-xssmatchset.html#cfn-wafregional-xssmatchset-xssmatchtuples


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-wafregional.cloudformation.XssMatchSetResource.XssMatchTupleProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-wafregional

